--- a/packages/container/package.json
+++ b/packages/container/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "containr",
+    "name": "container",
     "version": "1.0.0",
     "scripts": {
         "start": "webpack serve --config=config/webpack.dev.js",
@@ -20,7 +20,7 @@
         "html-webpack-plugin": "^4.5.0",
         "webpack": "^5.4.0",
         "webpack-cli": "^4.2.0",
-        "webpack-dev-server": "^3.11.0",
+        "webpack-dev-server": "^4.11.1",
         "webpack-merge": "^5.2.0"
     }
 }
